--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Mishkile/FS13FINAL/issues"
   },
-  "homepage": "https://github.com/Mishkile/FS13FINAL#readme"
+  "homepage": "https://github.com/Mishkile/FS13FINAL#readme",
+  "dependencies": {
+    "axios": "^1.3.4"
+  }
 }
