--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "fs13final",
+  "name": "dal",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "carsModel.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mishkile/FS13FINAL.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mishkile/FS13FINAL/issues"
-  },
-  "homepage": "https://github.com/Mishkile/FS13FINAL#readme"
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0"
+  }
 }
